<resources>
    <string name="app_name">SapperAndroid</string>
    <string name="textLogo">Minesweeper</string>
    <string-array name="textsSpinnerVariants">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>
    <string name="textChooseLevel">choose level</string>
    <string name="textPlayButton">Play!</string>
    <string name="backButton">Back</string>
    <string name="newButton">New</string>
    <string name="textWin">You won</string>
</resources>