<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/play_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorTopBar">

    <GridView
        android:id="@+id/sapperField"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="70sp"
        android:gravity="center"
        android:numColumns="10"
        android:stretchMode="columnWidth">

    </GridView>

    <Button
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp"
        android:layout_marginTop="10sp"
        android:text="@string/backButton" />

    <Button
        android:id="@+id/btnNew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10sp"
        android:layout_marginEnd="20sp"
        android:text="@string/newButton" />

    <TextView
        android:id="@+id/win_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30sp"
        android:fontFamily="@font/frm325x8"
        android:text="@string/textWin"
        android:textColor="@color/colorEndGameLabel"
        android:visibility="invisible" />

</RelativeLayout>