<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40sp"
        android:fontFamily="@font/frm325x8"
        android:text="@string/textLogo"
        android:textAlignment="center"
        android:textColor="@color/logoColor"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/levelSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/chooseLevelLable"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5sp"
        android:background="@drawable/blue_outline"
        android:backgroundTint="@android:color/transparent"
        android:entries="@array/textsSpinnerVariants"
        android:minHeight="48sp"
        android:popupBackground="#8659D6"
        android:prompt="@string/textLogo"
        android:spinnerMode="dropdown"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/chooseLevelLable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15sp"
        android:fontFamily="@font/frm325x8"
        android:text="@string/textChooseLevel"
        android:textColor="@color/logoColor"
        android:textSize="20sp" />

    <android.widget.Button
        android:id="@+id/playButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/levelSpinner"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100sp"
        android:background="@drawable/custom_play_button"
        android:minWidth="150sp"
        android:text="@string/textPlayButton"
        android:textColor="@color/white" />

</RelativeLayout>